--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,11 @@
-<h1>Listing articles</h1>
+<h1>Articles</h1>
 
 <%= link_to 'New article', new_article_path %>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-  </tr>
-
+<ul>
   <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.body %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-    </tr>
+    <li>
+      <%= article.title %>
+    </li>
   <% end %>
-</table>
+</ul>
