--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Articles</h1>
 
-<%= link_to 'New article', new_article_path %>
-
 <ul>
   <% @articles.each do |article| %>
     <li>
-      <%= article.title %>
+      <%= link_to article.title, article %>
     </li>
   <% end %>
 </ul>
+
+<%= link_to 'New article', new_article_path %>
