--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,31 +1,23 @@
-<%= form_with scope: :article, url: articles_path, local: true do |form| %>
-  <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited
-        this article from being saved:
-      </h2>
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <p>
+<h1>New Article</h1>
+
+<%= form_with model: @article do |form| %>
+  <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
-  </p>
+    <% @article.errors.full_messages_for(:title).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
+  </div>
 
-  <p>
-    <%= form.label :text %><br>
-    <%= form.text_area :text %>
-  </p>
+  <div>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %><br>
+    <% @article.errors.full_messages_for(:body).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
+  </div>
 
-  <p>
-    <%= form.submit :Save %>
-  </p>
+  <div>
+    <%= form.submit %>
+  </div>
 <% end %>
-
-<%= link_to 'Back', articles_path %>
