--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,8 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<h1><%= @article.title %></h1>
 
-<p>
-  <strong>Text:</strong>
-  <%= @article.body %>
-</p>
+<p><%= @article.body %></p>
 
-<%= link_to 'Back', articles_path %>
+<ul>
+  <li><%= link_to "Edit", edit_article_path(@article) %></li>
+  <li><%= link_to "Go Back", articles_path %></li>
+</ul>
