--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,47 @@
-<h1><%= @article.title %></h1>
+<div class="container">
+  <h1 class="title"><%= @article.title %></h1>
 
-<p><%= @article.body %></p>
+  <p><%= @article.body %></p>
 
-<ul>
-  <li>
-    <%= link_to "Edit", edit_article_path(@article) %>
-  </li>
-  <li>
-    <%= link_to "Destroy", article_path(@article),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %>
-  </li>
-  <li>
-    <%= link_to "Go Back", articles_path %>
-  </li>
-</ul>
+  <% if @article.comments.size > 0 %>
+    <hr />
+    <h2>Comments</h2>
+    <% @article.comments.each do |comment| %>
+      <p>
+        <strong>Commenter:</strong>
+        <%= comment.commenter %>
+      </p>
+
+      <p>
+        <strong>Comment:</strong>
+        <%= comment.body %>
+      </p>
+    <% end %>
+  <% end %>
+
+  <hr />
+
+  <h2>Add a comment:</h2>
+  <%= form_with model: [ @article, @article.comments.build ] do |form| %>
+    <p>
+      <%= form.label :commenter %><br>
+      <%= form.text_field :commenter %>
+    </p>
+    <p>
+      <%= form.label :body %><br>
+      <%= form.text_area :body %>
+    </p>
+    <p>
+      <%= form.submit %>
+    </p>
+  <% end %>
+</div>
+
+<br />
+<%= link_to "Edit", edit_article_path(@article) %>
+&nbsp;|&nbsp;
+<%= link_to "Destroy", article_path(@article),
+  method: :delete,
+  data: { confirm: "Are you sure?" } %>
+&nbsp;|&nbsp;
+<%= link_to "Go Back", articles_path %>
