--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,33 +1,18 @@
 <div class="container">
-  <h1 class="title">
-    <%= @article.title %>
-  </h1>
-  <p>
-    <%= @article.body %>
-  </p>
+  <h1 class="title"><%= @article.title %></h1>
+  <p><%= @article.body %></p>
 
+  <hr />
   <% if @article.comments.size > 0 %>
-    <hr />
     <h2>Comments</h2>
     <%= render @article.comments %>
+  <% else %>
+    <h4>No Comments Yet</h4>
   <% end %>
 
   <hr />
-
   <h2>Add a comment:</h2>
-  <%= form_with model: [ @article, @article.comments.build ] do |form| %>
-    <p>
-      <%= form.label :commenter %><br>
-      <%= form.text_field :commenter %>
-    </p>
-    <p>
-      <%= form.label :body %><br>
-      <%= form.text_area :body %>
-    </p>
-    <p>
-      <%= form.submit %>
-    </p>
-  <% end %>
+  <%= render 'comments/form' %>
 </div>
 
 <br />
